syntax = "proto3";

package grpcsimplebank;

import "google/api/annotations.proto";

option go_package = "./;pb";

service AccountService {
  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse) {
    option (google.api.http) = {
      post: "/v1/create_account"
      body: "*"
    };
  }
}

message CreateAccountRequest {
  string owner = 1;
  string email = 2;
  int64 balance = 3;
}

message CreateAccountResponse {
  int64 id = 1;
  string owner = 2;
  string email = 3;
  int64 balance = 4;
}